--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,69 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+nav{
+  display: flex;
+  background-color: crimson;
+  justify-content: space-between;
+}
+ul{
+  display: flex;
+}
+
+li{
+  margin: 20px;
+  list-style: none;
+  text-transform: capitalize;
+}
+a{
+  text-decoration: none;
+  text-transform: uppercase;
+}
+h2{
+  padding: 20px;
+}
+.home{
+  background-image: url('./components/Supermarkt.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.container{
+  display: flex;
+  flex-wrap: wrap;
+}
+.card{
+  margin:20 auto;
+  max-width: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  border-radius: 2px;
+  box-shadow: 3px 2px 3px silver;
+  transition: all 0.3s ease-in-out;
+  padding: 3px;
+  background-color: crimson;
+
+
+}
+h1{
+  color:white;
+
+}
+p{
+  color: white;
+}
+.textGroup{
+  padding: 10px;
+  text-align: center;
+  color:crimson
+}
+img{
+  margin: 5px;
+}
+.footer{
+  text-align: center;
+  background-color:bisque;
 }
