--- a/src/index.css
+++ b/src/index.css
@@ -117,7 +117,22 @@ background-color: bisque;
   display: flex;
   width: 600px;
   margin: 20px auto;
-  background-color: darkgrey;
+  background-color:rgb(69, 139, 140);
+  gap: 2px;
+  padding: 20px;
+  justify-content:center;
+  align-items: center;
+
+}
+.register{
+  color:black;
+  justify-content:space-evenly;
+}
+.design.register{
+  margin-bottom: 50px;
+}
+.login-p{
+  color:black;
 }
 
 .form {
@@ -133,7 +148,7 @@ background-color: bisque;
 
 .design {
   border-radius: 5px;
-  background-color: cadetblue;
+  background-color:rgb(76, 63, 84)
 }
 
 .design h3 {
